--- a/_posts/2018-03-14-生化7疯人院1.md
+++ b/_posts/2018-03-14-生化7疯人院1.md
@@ -9,7 +9,7 @@ categories: 生化危机
 
 ## 准备工作：普通难度全收集
 
-之前提到4小时普通模式通过拿到了Wesker01R、圆锯和X光眼镜，之后打算不看攻略通关普通，来拿20个Mr. Everywhere和普通模式通关的奖励。但是只靠眼镜很容易错过什么东西。最后文件没全（路人名单背面没看），打完眼镜Jack发现Mr. Everywhere漏了，只能读档重开，最终完成了两本防御书和跑鞋的收集。所以特别提醒一下，无法回到之前场景的场合有：
+之前提到4小时普通模式通过拿到了Albert01R、圆锯和X光眼镜，之后打算不看攻略通关普通，来拿20个Mr. Everywhere和普通模式通关的奖励。但是只靠眼镜很容易错过什么东西。最后文件没全（路人名单背面没看），打完眼镜Jack发现Mr. Everywhere漏了，只能读档重开，最终完成了两本防御书和跑鞋的收集。所以特别提醒一下，无法回到之前场景的场合有：
 
 - Mia战之后无法回到客屋，其中有文件和第一个录像带（用来获得第一个硬币）
 - 眼睛Jack战之后无法回到之前的所有场景（但是破坏Mr. Everywhere不需要在一个存档下完成，所有只要有一个打Jack之前的存档，就可以用来完成收集）
@@ -17,7 +17,7 @@ categories: 生化危机
 
 疯人院奖励是无限子弹，对于开箱3次的成就没有任何帮助，因为Lucas游戏前后剧情强制开箱两次。剩下的一次大多数人用在沉船之后，如果有信心裸体跑到最终Boss前面（死掉之后可以不开箱整理物品），第一次开箱拿无限子弹也行……无限子弹主要用来挑战最速通关，对3次洗手成就也有一定帮助。初次之外所有奖励都可以在普通难度获得，入手方法前面已经说了，是4小时内通关和20个Mr. Everywhere全破坏（不必在一次游戏内完成）。总结一下：
 
-- Wesker01R：装弹只有三发的手枪，强化弹爆头一枪秒疯人院霉尸（有时需要两发）
+- Albert01R：结局剧情杀对BOW专用手枪的改版，装弹只有三发的手枪，强化弹爆头一枪秒疯人院霉尸（有时需要两发）
 - 圆锯：近战神器，后面有详细用法讲解
 - X光眼镜：搜刮好帮手，Baker全家一生的宝物都会被主角狠心抢走
 - 两本防御书：一本书没什么用，两本加在一起靠完美防御可以无伤
@@ -44,10 +44,10 @@ categories: 生化危机
 
 瞄准和弹药控制的问题可以用速刷得到的道具解决。近战武器圆锯可以大幅度降低瞄准的难度，并且节省大量弹药。虽然和PC版比这样会增加受伤的危险，但容错问题可以靠两本防御书来部分解决，打到现在我还没入手猛攻和防御两枚硬币也没遇到问题。重点是回血要常用，黄血虽然能支持两下，但是首创硬直可能让你直接被秒，还是保持绿血比较划算。我目前药剂全部用来和药草合成，毕竟圆锯。
 
-- 绝大部分场合都是L2+R2连续锯，点R2没发现有什么好处。
-- 对普通霉尸，前冲同时上扬电锯锯头。可能被反击。反击后如果失去焦点可以蹲下锯腿，霉尸倒地后就容易锯头了。
+- 绝大部分场合都是L2+R2连续锯，点R2距离远但起手时间长，避免使用。
+- 对普通霉尸，前冲同时上扬电锯锯头。面对单个敌人后期需要两次才能爆头，听到爆头响声之后往前诺一点。面对复数敌人可能被反击。反击后如果失去焦点可以蹲下锯腿，霉尸倒地后就容易锯头了。
 - 对四脚霉尸，下蹲同时上扬电锯前冲，百分之百爆头死。
-- 复数四角霉尸不可怕，蹲下会自己跳过来送死，普通霉尸尽量先用Wesker01R爆头一个。要注意疯人院霉尸速度大幅度增加，被接近了果断换圆锯锯头，大概会被击中但是如果是绿血状态一般战斗中不会被秒。心态上猛一点反而不容易死。
+- 复数四角霉尸不可怕，蹲下会自己跳过来送死，普通霉尸尽量先用Albert01R爆头一个。要注意疯人院霉尸速度大幅度增加，被接近了果断换圆锯锯头，大概会被击中但是如果是绿血状态一般战斗中不会被秒。心态上猛一点反而不容易死。
 - 胖子当做Boss看待，用特殊打法。
 
 存盘点的问题，可以靠审慎的流程控制来解决。下面是我个人的流程，全程非常龟导致风险极小，但时间稍长：
@@ -72,7 +72,7 @@ categories: 生化危机
 - 房车附近继续搜刮，进旧房子之前建议存盘。原因是我们之前节省的大量磁带后面基本够用，接下来要全近战节省弹药了。
 - 旧房子所有蜂巢全部近距离圆锯解决。一定会被虫群咬到，但是虫群攻击力很低，可以放心地接近红血再嗑药。
 - 巡逻Marguerite直接过去锯，最后会被摔，之后老太太就不会出现了。蜂巢打完后大厅会出现两只霉尸，因为有存盘所以可以放心地锯头近战。
-- 之后就可以放心地搜刮老房子了，拿手柄、组装喷火枪（用来清蜘蛛路障、后面的爆炸陷阱、清虫子或者虫群）、拿背包、拿乌鸦钥匙、回大屋打开乌鸦钥匙门拿物品，这些事办完之后我求稳存了一下，其实没啥必要，保持满血即可。然后去旧屋乌鸦门触发战斗。有虫子的时候喷火器，虫子杀光赶快换成Wesker01R加强化子弹（普通子弹加火药变强化弹），翻车可能性基本为零。
-- 之后继续在旧屋和花房搜集物品，跳坑战斗之前建议存盘，虽然老太太不难但毕竟是Boss。下楼之后小心上二楼触发老太太，后退一步三法Wesker两法散弹枪，换弹上楼老太太会在楼上趴着，Wesker打头掉下来之后蹲下锯下体。要注意上跳之后大概率发动攻击，注意防御。之后老太太一般是安静地趴在某地，用枪打下来锯下体即可。长时间找不到她会刷出虫子，喷火枪解决。
+- 之后就可以放心地搜刮老房子了，拿手柄、组装喷火枪（用来清蜘蛛路障、后面的爆炸陷阱、清虫子或者虫群）、拿背包、拿乌鸦钥匙、回大屋打开乌鸦钥匙门拿物品，这些事办完之后我求稳存了一下，其实没啥必要，保持满血即可。然后去旧屋乌鸦门触发战斗。有虫子的时候喷火器，虫子杀光赶快换成Albert01R加强化子弹（普通子弹加火药变强化弹），翻车可能性基本为零。
+- 之后继续在旧屋和花房搜集物品，跳坑战斗之前建议存盘，虽然老太太不难但毕竟是Boss。下楼之后小心上二楼触发老太太，后退一步三法Albert两法散弹枪，换弹上楼老太太会在楼上趴着，Albert打头掉下来之后蹲下锯下体。要注意上跳之后大概率发动攻击，注意防御。之后老太太一般是安静地趴在某地，用枪打下来锯下体即可。长时间找不到她会刷出虫子，喷火枪解决。
 - 残忍地杀害老太太之后，她辛辛苦苦养育的花房被洗劫一空，之后大屋大厅和地下室会重新刷出霉尸，地点和普通难度相同。所以进大厅之前可以存盘。之后拿蛇钥匙、拿红蓝钥匙（后院刷出两只四角霉尸，蹲下电锯零风险）不要存盘，Lucas引爆电视之后会自动存盘。之后一路清路障锯霉尸，打电梯双胖之前收集所有物品并存盘。
 - 之后我试着去见识了一下传说中的双胖，速度很快，而且不能迅速解决。之后继续挑战。
