--- a/_posts/2018-06-25-生化7-21点.md
+++ b/_posts/2018-06-25-生化7-21点.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "生化危机7 Resident Evil: Biohazard 疯人院Madhouse模式心得（下）"
+title:  "生化危机7 Resident Evil: Biohazard 21点 幸存者+ 无伤通关
 date:   2018-06-25 15:37:00 -5000
 categories: 生化危机
 ---
