--- a/_posts/2018-12-08-2018杂记.md
+++ b/_posts/2018-12-08-2018杂记.md
@@ -128,3 +128,24 @@ PS：对我个人来说，最难受的是故意装出来的非洲口音，不过
 创作年代。越古老的作品，读者欣赏起来就越包容，比如重男轻女、杀人如麻的水浒传，读者反而会特别注意当时社会战乱的社会背景，不会从所谓“细思恐极”的角度切入。相反，对不公平的不同反抗态度、方法，对权势、声望的处理态度，水浒传的这些方面反倒是仍然具有相当的现实意义。尽管文艺水平有所局限，我们仍然认为它是一部水平较高的作品。
 
 （待续，但套用以上态度，我对之前提到的几部作品的看法便不难理解了。这个理论有时间要加以阐述，或者跟我面谈也可以。）
+
+12/8
+
+## 大师模式开荒
+
+### Day 1
+
+难度没有想象的高，主要表现在如下几个方面：
+
+- 虽然传说中大师模式新手村会被蓝怪轮，但那个的前提估计是只用树枝抽；只要捡一些攻击力5以上的生锈武器之类，单挑小怪总是没问题的。打倒之后也会掉落新的武器提供续航。
+- 没有武器或者碰到怪物村的时候，避免战斗的难度很低，就算没有拿到伪装面具也不难逃开战斗。（我没有伪装面具之前翻了三十个呀哈哈，没有受到什么阻碍。）
+- 塞尔达的战斗机制决定了食物提供的战斗续航重要性并不高，就算不特意打猎采集，也能顺利进行流程。
+
+不过当然拿到符文之后还是一波amiibo，作用并不是特别大就是了。主要的好处是拼上两三把武器可以击败一个猫布林，靠攻击力27的猫布林大棒可以硬钢一波小怪，而且也不用担心食物和钱的问题了。我的流程如下：
+
+- 新手村四神殿没什么好说的，也没什么像样的战斗，炮台守护者生命很少，有弓箭能射眼之后就很简单了。
+- 我一周目的时候是嗑药抗寒的。想在小屋拿抗寒衣服，要在锅旁边等到晚上国王老头才会出现，然后如果你摸索出了食谱就能对话并获得衣服了。
+- 出了新手村可以直接拿伪装面具，然后基本上就能全程脱战了。不过我看到村子北方有马，就往竞技场旁边的马厩跑了一趟，顺便去竞技场拿幻影头盔。
+- 竞技场那边的神殿里有四个小守护者，按理说应该能机关杀的用机关杀，不能的直接跑过去比较好。不过我武器多，拼了一些食物，耗光了所有武器打爆了所有小守护者。
+- 下面有守护者的塔，一周目我是靠两圈多耐力硬爬上去的。初期耐力不足，至少需要杀掉一个炮台，然后避开其他守护者就能爬上去了。
+- 这之后我回去新手村重新出发，去拿了伪装面具和幻影套的剩下两件，然后重新去做主线。
