added missed boss

--- a/_posts/2020-04-27-只狼.md
+++ b/_posts/2020-04-27-只狼.md
@@ -193,7 +193,7 @@ Nier：打B结局途中感到无聊就弃坑了。如果二周目允许跳图，
 
 之后就算到正殿，也因为剧情没走完，不能继续。我选择了回去走水生村路线。
 
-顺便说一句，这些路线我都没有选择跑酷，而是一路忍杀过去。在我看来，跑酷是对游戏很熟悉之后速通用的，一周目还是要搞清楚所有敌人的配置和攻略方法。我选择的是能忍杀就忍杀，不能的话尽量一对一硬钢，算是最一般的玩法。当然后来血量h和葫芦上去了，就算是能脱战循环，面对四个很弱的小兵也会选择直接杀掉。
+顺便说一句，这些路线我都没有选择跑酷，而是一路忍杀过去。在我看来，跑酷是对游戏很熟悉之后速通用的，一周目还是要搞清楚所有敌人的配置和攻略方法。我选择的是能忍杀就忍杀，不能的话尽量一对一硬钢，算是最一般的玩法。当然后来血量和葫芦上去了，就算是能脱战循环，面对四个很弱的小兵也会选择直接杀掉。
 
 ### 苇名七本枪·山内式部利胜
 
@@ -211,7 +211,7 @@ Nier：打B结局途中感到无聊就弃坑了。如果二周目允许跳图，
 
 ### 牛饮德次郎
 
-飞镖打死狗，跳砍背刺，然后开始补课。我没有选择拼刀，而是躲闪为主，后跳反击。其实这就是近距离的Hit and Run，可以用来对付这类破绽比较多的敌人，或者孤影众那类判定弱的。直到幻影破解僧开始，我才用中距离Hit and Run，按住加速躲技能。等到再战蚺蛇重藏的时候，发现加速跑比近距离躲闪安全多了。
+飞镖打死狗，跳砍背刺，然后开始补课。我没有选择拼刀，而是躲闪为主，后跳反击。其实这就是近距离的Hit and Run，可以用来对付这类破绽比较多的敌人，或者孤影众那类判定弱的。直到幻影破戒僧开始，我才用中距离Hit and Run，按住加速躲技能。等到再战蚺蛇重藏的时候，发现加速跑比近距离躲闪安全多了。
 
 ### 雾隐贵人
 
@@ -262,7 +262,11 @@ Hit and Run很简单，就是在场地够大的情况下和敌人保持距离，
 
 铁炮要塞是我唯一跑酷过的图，虽然熟悉地图还是可以推过去，但是一开始打不可能熟悉，没必要顶着一大堆轰击摸索打法。反推图简单多了，而且我也没用傀儡术，正经推回去没什么问题。
 
-### 🐵
+### 长爪蜈蚣·峰云
+
+弹刀之后忍杀，重复两次。一次过无难度。
+
+### 🐵 & 🐍
 
 猴子开会的地方我是直接跳下去一个一个杀了，血烟等AOE一概没用，不知道用哪个AOE打起来更爽。
 
