updated sekiro part 2

--- a/_posts/2020-04-27-只狼.md
+++ b/_posts/2020-04-27-只狼.md
@@ -12,7 +12,7 @@ categories: Sekiro PC 游戏 只狼
 # 目录
 
 - [前言](#%E5%89%8D%E8%A8%80)
-- [流水账第一部分](#%E6%B5%81%E6%B0%B4%E8%B4%A6%E7%AC%AC%E4%B8%80%E9%83%A8%E5%88%86)
+- [一周目流水账第一部分](#%E4%B8%80%E5%91%A8%E7%9B%AE%E6%B5%81%E6%B0%B4%E8%B4%A6%E7%AC%AC%E4%B8%80%E9%83%A8%E5%88%86)
   - [武士大将·河原田直盛](#%E6%AD%A6%E5%A3%AB%E5%A4%A7%E5%B0%86%C2%B7%E6%B2%B3%E5%8E%9F%E7%94%B0%E7%9B%B4%E7%9B%9B)
   - [铃铛](#%E9%93%83%E9%93%9B)
   - [赤鬼](#%E8%B5%A4%E9%AC%BC)
@@ -41,12 +41,31 @@ categories: Sekiro PC 游戏 只狼
   - [苇名弦一郎](#%E8%8B%87%E5%90%8D%E5%BC%A6%E4%B8%80%E9%83%8E)
   - [耍猴](#%E8%80%8D%E7%8C%B4)
   - [蛇眼·白藤](#%E8%9B%87%E7%9C%BC%C2%B7%E7%99%BD%E8%97%A4)
-  - [🐵](#)
+  - [长爪蜈蚣·峰云](#%E9%95%BF%E7%88%AA%E8%9C%88%E8%9A%A3%C2%B7%E5%B3%B0%E4%BA%91)
+  - [🐵 & 🐍](#--)
   - [狮子猿](#%E7%8B%AE%E5%AD%90%E7%8C%BF)
   - [孤影众·忌手](#%E5%AD%A4%E5%BD%B1%E4%BC%97%C2%B7%E5%BF%8C%E6%89%8B)
   - [巨型忍者·枭](#%E5%B7%A8%E5%9E%8B%E5%BF%8D%E8%80%85%C2%B7%E6%9E%AD)
   - [孤影众·枪足之正长](#%E5%AD%A4%E5%BD%B1%E4%BC%97%C2%B7%E6%9E%AA%E8%B6%B3%E4%B9%8B%E6%AD%A3%E9%95%BF)
   - [蚺蛇重藏](#%E8%9A%BA%E8%9B%87%E9%87%8D%E8%97%8F)
+- [一周目第二部分](#%E4%B8%80%E5%91%A8%E7%9B%AE%E7%AC%AC%E4%BA%8C%E9%83%A8%E5%88%86)
+  - [源之宫破戒僧](#%E6%BA%90%E4%B9%8B%E5%AE%AB%E7%A0%B4%E6%88%92%E5%83%A7)
+  - [淤加美长老·静](#%E6%B7%A4%E5%8A%A0%E7%BE%8E%E9%95%BF%E8%80%81%C2%B7%E9%9D%99)
+  - [樱牛](#%E6%A8%B1%E7%89%9B)
+  - [樱龙](#%E6%A8%B1%E9%BE%99)
+  - [后期刷法](#%E5%90%8E%E6%9C%9F%E5%88%B7%E6%B3%95)
+  - [无首狮子猿](#%E6%97%A0%E9%A6%96%E7%8B%AE%E5%AD%90%E7%8C%BF)
+  - [苇名流·水生氏成](#%E8%8B%87%E5%90%8D%E6%B5%81%C2%B7%E6%B0%B4%E7%94%9F%E6%B0%8F%E6%88%90)
+  - [赤备重吉](#%E8%B5%A4%E5%A4%87%E9%87%8D%E5%90%89)
+  - [怨恨之鬼](#%E6%80%A8%E6%81%A8%E4%B9%8B%E9%AC%BC)
+  - [七本枪·鬼庭主马雅次](#%E4%B8%83%E6%9C%AC%E6%9E%AA%C2%B7%E9%AC%BC%E5%BA%AD%E4%B8%BB%E9%A9%AC%E9%9B%85%E6%AC%A1)
+  - [三个七面武士](#%E4%B8%89%E4%B8%AA%E4%B8%83%E9%9D%A2%E6%AD%A6%E5%A3%AB)
+  - [三个地面无首](#%E4%B8%89%E4%B8%AA%E5%9C%B0%E9%9D%A2%E6%97%A0%E9%A6%96)
+  - [两个水中无首](#%E4%B8%A4%E4%B8%AA%E6%B0%B4%E4%B8%AD%E6%97%A0%E9%A6%96)
+  - [三年前义父](#%E4%B8%89%E5%B9%B4%E5%89%8D%E4%B9%89%E7%88%B6)
+  - [剑圣·苇名一心](#%E5%89%91%E5%9C%A3%C2%B7%E8%8B%87%E5%90%8D%E4%B8%80%E5%BF%83)
+  - [一周目总结](#%E4%B8%80%E5%91%A8%E7%9B%AE%E6%80%BB%E7%BB%93)
+- [二周目](#%E4%BA%8C%E5%91%A8%E7%9B%AE)
 
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
 
@@ -80,7 +99,7 @@ Nier：打B结局途中感到无聊就弃坑了。如果二周目允许跳图，
 
 不过总的来说，只狼体验和普通难度忍龙差不多。我忍龙是在超忍战斗机那关弃坑的，只狼大概不会在一周目就放弃。
 
-## 流水账第一部分
+## 一周目流水账第一部分
 
 首先是线性部分。弦一郎之前的教学关不算，之后的精英怪挑战失败代价很小，脱战很容易，所以不看攻略也能轻松解决。
 
@@ -309,3 +328,106 @@ Hit and Run很简单，就是在场地够大的情况下和敌人保持距离，
 先清小怪，然后打忍者，最后背刺蚺蛇重藏，Hit and Run - 尴尬的地方是其实根本不用Run，因为这胖子没事就喝酒，输出机会实在太多。加上不死斩能大幅度削减HP，一次过。
 
 然后把义父暂时晾在这里，第一部分结束。（待续）
+
+## 一周目第二部分
+
+第一部分差不多打了一个礼拜，第二部分从周一打到周六；周日开始二周目。先把一周目第二部分补完。
+
+### 源之宫破戒僧
+
+有两种cheese打法，我用的是最简单的一种：开局把破戒僧引过来，然后往右边角落跑，等她（是的，是“她”，打完才知道破戒僧是八百比丘尼——所以才害怕鞭炮）发动攻击往悬崖下面二段跳，成功的话她会被卡住。卡住之后仍然会发动攻击，但跟凛一样，攻击欲望大幅度降低。注意第一管血打完之后要继续砍几刀，然后扔个灰烬球。然后她就消失了，忍杀字样出现。
+
+然后开始探索源之宫。除了不能下水之外，别的没什么好注意的，敌人基本都能暗杀，被发现的话要速杀贵族，不然会被年寄；武士可以用锈丸快速击杀。一点一点推过去的话，敌人比孤影众忍者更好应付。普通小兵难度的话，我觉得孤影众最难，腿攻击难以弹反；赤备兵、武士、和尚都可以拼刀，弹反，应付危字攻击，节奏感比孤影众强一些；苇名众可以连续弹刀，近距离一对一可以更快解决；源之宫武士用锈丸解决，难点是有几个场景不能一对一；不能弹反的和尚、赤备喷火兵之类平砍即可，和三刀破防的小兵一样，最好对付。
+
+源之宫的感觉和合金装备5很像，可以从破戒僧一直推到看跳舞的赏花舞台。当然其实不用打，不过Hit and Run加血雾，完成一对五也有一定的乐趣。接下来就是难度在雾隐贵人之上的强力精英，也是阻止我们畅游的罪魁祸首。
+
+### 淤加美长老·静
+
+这游戏我一直到通关都没有成功雷返，非常丢人。这个Boss也是一开始就劈中我一雷，之后当然掉过去直接砍死就好了。她是踢球的，没法弹刀，接近之后就死定了。
+
+### 樱牛
+
+从房顶走过去，杀不杀房顶小兵都行，重点是跳下房子之后，放烟花之后要砍两刀，不然跑两步不会触发撞墙的动画。这么打算是剧情杀。
+
+### 樱龙
+
+一阶段除了一开始之外，不用单个击杀白木老翁，上树跳杀效率高太多了，三四次就能解决第一阶段。
+
+二阶段一开始是没有难度的，往打雷的树旁边跑，水平跑躲纵斩，跳起躲横斩，硬直很长很难失误。注意最好不要在纵斩前跳起接雷，躲过二连击比较好。
+
+之后躲刀难度稍高了一点，但更大的难度是不知道应该做什么。其实只要专心躲刀即可，耐心等带雷的树再次出现，然后就是接雷高跳的剧情杀了。总之虽然是剧情杀，但不看视频的话还是可能翻车。
+
+至此源之宫结束，赤备军进攻也进入下一阶段，可以去刷虎口五傻了。
+
+### 后期刷法
+
+- 虎口阶梯刷五个赤备兵可以迅速积累经验金钱，敲钟的话还能提高雷汞效率，有助于解锁除琉璃之外的全部义手升级。
+- 源之宫刷贵人，可以收集死腊瘤和脂腊瘤。不过脂腊瘤刷水生村忍者的时候就能积累不少，后期也很常见，一般不会缺。
+- 赤成珠比较难刷，苇名城有两个红眼苇名众，不过不容易刺杀，而且掉率比较低。
+- 我把苇名城赤鬼在首次入侵时击杀了，没法实验利用赤鬼刷经验的方法，据说效率比虎口五傻稍高，可能跟读取速度有关？
+
+总之，推荐先完成源之宫，之后就可以自由选择farm还是击杀精英了。
+
+### 无首狮子猿
+
+我一开始还奇怪为什么游戏有这么大的空地，后来才知道果然墙上的枪是一定会被击发的。二次狮子猿其实难度更低了，因为一阶段其实熟悉打法之后，弹刀难度很低，而且后期物资丰富，还可以用飞雪加速击杀（虽然一周目我除了剑圣还是坚持不用道具的原则）。二阶段看起来场面很乱，但黑猿其实时很弱的，鞭炮两次加平砍基本就能带走了。比较稳妥的办法是等恐惧之吼之后，黑猿会主动跑过来，白猿也有硬直，鞭炮平砍会更安全；但其实也可以锁定黑猿，和白猿拉开距离就能开砍了。甚至可以弹反白猿造成硬直再去攻击黑猿。总之，这个时期玩家攻高血厚，对攻击模式也更加熟悉，可以随便欺负狮子猿了。
+
+### 苇名流·水生氏成
+
+红眼居合哥生不逢时，因为赤备入侵，地图混乱，可以先刺杀一管血，然后引三个孤影众过去群殴，看戏就好了。虽然挡居合很有趣，但看打群架更有趣。
+
+### 赤备重吉
+
+火属性蚺蛇重藏，虽然不难，但是容错很低。建议清光小兵，在空地跟他决斗，就没有难度了。有了不死斩，Hit and Run效率会大大提高。
+
+### 怨恨之鬼
+
+逃课很安全，一开始卡墙角成功率极高，之后跳房子就算试上十分钟也无所谓。我把加速改到R1之后成功率提高不少。
+
+### 七本枪·鬼庭主马雅次
+
+首先月隐糖击杀武士，然后脱战返回，背刺一管血，最后悬崖边刺脚。这种打法比傀儡术更安定。
+
+### 三个七面武士
+
+源之宫的可以跳起刺杀第一管血，其他的只能硬刚两管血。建议两手准备，如果能空中刺杀最好，否则硬杀也不算太难，不过地形不好的话躲技能还是很恶心的。
+
+### 三个地面无首
+
+掌握绕背能加速击杀，不然躲技能还是很烦的。我没有学义手流，所以没法用伞，看视频好像用伞更安定。
+
+### 两个水中无首
+
+苇名城的比较简单，砍三刀绕圈游泳就行了。源之宫的主要难度是游泳距离太长，有可能在神雪失效之前无法完成击杀，如果两个无首狂放技能，翻车也没有办法。
+
+总之，这八个死灵系敌人，推荐后期有大量神雪了再打。我一开始不知道神雪可以直接买，不然其实没必要花时间刷武士。
+
+现在基本上所有该解锁的解锁，该收集的收集，可以去打最难的两个Boss了。
+
+### 三年前义父
+
+三年前义父不吃拜年loop，地方太小Hit and Run容易失误，最后我是拼刀打过去的。这个boss和天守阁弦一郎我最后都是拼刀强杀，通过视频熟悉攻击模式和应对方法。
+
+### 剑圣·苇名一心
+
+剑圣最大的难度在于四管血很烦，所以最后是用道具流拼过去的。
+
+弦一郎阶段，一开始绕后拜年二连，然后拼刀打光躯干值。打完义父会觉得弦一郎很弱，拼刀更简单。
+
+第二阶段阿攻糖，咸鱼突刺，后跳循环。一般纸人用光就能打空一管血，不然残血的话等破绽收了就好。
+
+第三和第四阶段，我是用Hit and Run，只反击下砸那招，跳起的时候朝敌人方向闪避，然后不死斩一下，后退两次。最接近的一次，第四阶段还剩半血，于是用了一个襁褓地藏过的。两个雷返都没有成功，真是丢人。
+
+### 一周目总结
+
+能收集的基本都收集了，小太郎送去神隐，武士送去地牢，两个红眼意外地死了好几次。不用月隐糖背刺的话，两个红眼其实挺难打的，最后是用旋转火斧拼死了和尚，然后再去跟武士单挑。单挑当然就没有难度了。
+
+鱼鳞全收集，让源之宫坛子贵人成为鱼王，因为离鬼仏最近。
+
+佛珠最后差了三个，两个在水下，一个在毒沼大佛头顶，当初没有找到上去的路。
+
+琉璃武器做的手里剑和机关斧，我义手派生一个也没升级，这些也没起到什么作用。不过据说剑圣用火伞打更安定。
+
+## 二周目
+
+（待续）
