--- a/_posts/2020-04-27-只狼.md
+++ b/_posts/2020-04-27-只狼.md
@@ -66,6 +66,21 @@ categories: Sekiro PC 游戏 只狼
   - [剑圣·苇名一心](#%E5%89%91%E5%9C%A3%C2%B7%E8%8B%87%E5%90%8D%E4%B8%80%E5%BF%83)
   - [一周目总结](#%E4%B8%80%E5%91%A8%E7%9B%AE%E6%80%BB%E7%BB%93)
 - [二周目](#%E4%BA%8C%E5%91%A8%E7%9B%AE)
+  - [还符篇](#%E8%BF%98%E7%AC%A6%E7%AF%87)
+  - [拿回护符](#%E6%8B%BF%E5%9B%9E%E6%8A%A4%E7%AC%A6)
+  - [三年前](#%E4%B8%89%E5%B9%B4%E5%89%8D-1)
+  - [水生村路线](#%E6%B0%B4%E7%94%9F%E6%9D%91%E8%B7%AF%E7%BA%BF)
+  - [金刚山仙峰寺](#%E9%87%91%E5%88%9A%E5%B1%B1%E4%BB%99%E5%B3%B0%E5%AF%BA)
+  - [坠落之谷](#%E5%9D%A0%E8%90%BD%E4%B9%8B%E8%B0%B7)
+  - [Boss战](#boss%E6%88%98)
+  - [苇名城第二阶段](#%E8%8B%87%E5%90%8D%E5%9F%8E%E7%AC%AC%E4%BA%8C%E9%98%B6%E6%AE%B5)
+  - [无首狮子猿](#%E6%97%A0%E9%A6%96%E7%8B%AE%E5%AD%90%E7%8C%BF-1)
+  - [源之宫](#%E6%BA%90%E4%B9%8B%E5%AE%AB)
+  - [苇名城第三阶段](#%E8%8B%87%E5%90%8D%E5%9F%8E%E7%AC%AC%E4%B8%89%E9%98%B6%E6%AE%B5)
+  - [三年前义父](#%E4%B8%89%E5%B9%B4%E5%89%8D%E4%B9%89%E7%88%B6-1)
+  - [剑圣](#%E5%89%91%E5%9C%A3)
+  - [子任务](#%E5%AD%90%E4%BB%BB%E5%8A%A1)
+- [总结](#%E6%80%BB%E7%BB%93)
 
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
 
@@ -327,7 +342,9 @@ Hit and Run很简单，就是在场地够大的情况下和敌人保持距离，
 
 先清小怪，然后打忍者，最后背刺蚺蛇重藏，Hit and Run - 尴尬的地方是其实根本不用Run，因为这胖子没事就喝酒，输出机会实在太多。加上不死斩能大幅度削减HP，一次过。
 
-然后把义父暂时晾在这里，第一部分结束。（待续）
+然后把义父暂时晾在这里，第一部分结束。
+
+（待续）
 
 ## 一周目第二部分
 
@@ -428,6 +445,88 @@ Hit and Run很简单，就是在场地够大的情况下和敌人保持距离，
 
 琉璃武器做的手里剑和机关斧，我义手派生一个也没升级，这些也没起到什么作用。不过据说剑圣用火伞打更安定。
 
+（待续）
+
 ## 二周目
 
-（待续）
+一周目通关，全boss全精英击破，支线任务全通，三结局道具全收集，义手全解锁（还差四个琉璃需要二周目才能得到），全葫芦全HP全战斗记忆。经验必须要多周目刷，不过除了大招基本也都解锁了。总之收集已经做得差不多了，还符开始。
+
+### 还符篇
+
+我本来就不喜欢防御，基本都是弹反的，所以防御费血问题倒是不大。两个武士大将打法类似，弹反看破跳起；赤鬼Hit and Run都很简单。鬼形部稍微有点麻烦。本来是打算用龙闪爆头的，但是试了几次没打准，最后打的比初见还差。不过现在有十个葫芦，胡乱打也能过去就是了。
+
+### 拿回护符
+
+死了好几次之后，试了半天踩墙跳火牛房，一直没找到窍门；最后决定还是把护身符拿了回来，之后就是弹反砍头，几套带走。武士大将和居合哥路数类似。打弦一郎会导致难度上升，所以转到其他线路。
+
+### 三年前
+
+忍者猎人一周目的时候完全忽略了，这次打的时候特别注意了一下，同样是包剪锤老师。酒鬼打法和一周目一样，不过这次不用脱战，绕圈干掉小兵，最后二打一。
+
+在道具齐备的情况下，打蝴蝶夫人就没必要用安全打法了，速通打法是拼刀，她完美招架之后反弹她的招式，可以继续拼刀。跳起手里剑击落，二阶段幻影用鸣种直接驱散。这个战斗记忆算是白送的，也许赤鬼之前就拿比较好。
+
+### 水生村路线
+
+水生村是可以不通过地牢直接跳的，遗冢过桥右跳，可以直接跑到开始地点，七本枪没有战斗记忆直接忽略。这次遇到武士他会自己去乐师线，因为还没有到过地牢。老方法对付井底孤影众。毒沼蛇眼背刺第一管血，不过貌似二周目不会中毒了，嗑神雪拼刀过，不过最后我也不知道怎么应对危字投技，后跳闪避都不行，好像只能用弹反，但是弹反时机我还是没搞清楚。
+
+牛饮德次郎是可以跳过的，雾隐贵人之后凛本来也能跳，不过为了完成武士故事线，把她关厕所打死。为了不提高难度，转去打仙峰寺线路。
+
+### 金刚山仙峰寺
+
+有了琉璃斧，铁甲武士就很简单了，一次过。然后一路跑到正殿，转去打落谷线。
+
+### 坠落之谷
+
+一周目是我搞错了，白蛇神社直接就能去，不需要潜水。铁炮要塞一路跑步去，弹反弹死蜈蚣之后，才会因为钥匙卡住。这时候才必须回去打弦一郎。
+
+### Boss战
+
+接下来要从难度一直接打到难度三。首先是弦一郎，他的所有招数全有对策，弹刀弹死。然后打四猴，速通打法失误的话可能需要重置。破戒僧跳起忍杀试了几次没试出来，鸣种、鞭炮、神雪搞到残血，最后Hit and Run收工。
+
+后来才意识到狮子猿应该放在四猴前面，不然打死三个Boss难度就会进入第三阶段了。不过狮子猿是比较弱的Boss，一阶段不用道具有点烦，二阶段白给，一阶段用火攻会加快速度。
+
+### 苇名城第二阶段
+
+本来是可以直接去打枭的，但是有个存盘点连续挑战会方便点，所以先把孤影众干掉把窗户打开。不死斩直接拼血就行，难度比井底低，因为地方宽敞很多。
+
+这里枭和之前的弦一郎其实都是可以神雪关厕所的，但是对手法要求比较高，当然用普通打法也可以。拜年二连的缺点是初期HP高的时候削韧无意义，本来居合是不错的招式不过我没解锁（虽然其实是有技能点的），最后换成瞎鸡巴砍一次过。基本思路就是弹掉所有攻击，禁药兜后砍，瞎鸡巴砍确反跳起重斩；拼刀的时候如果收招是先左劈再右劈，本来是可以用突刺确反的，但如果稍慢一点就会被看破，风险很大，我用瞎鸡巴砍确反效果比较好。打到这个阶段，就没必要Hit and Run了，拼刀效率高一些，不要太在乎枭的躯干，回复自身躯干比较安定。
+
+### 无首狮子猿
+
+点香之后难度进入第四阶段，狮子猿一阶段白给，二阶段只要送个吼，黑猿击杀速度就很快了。总体来说，狮子猿是比较菜的Boss，所以完全沿用了一周目的打法，也不太容易翻车。
+
+### 源之宫
+
+破戒僧卡墙角Bug杀，这次她冲过来之后，我直接跳崖，没二段跳，也没听到攻击声，结果一次就卡住了很奇怪。
+
+然后跳过源之宫，方法是沿着左边跑下去，树干处跳进水里划水三次潜水，可以躲过一次雷击。然后会中一次雷。继续游下去可以进洞。接着在洞里只要不停划水，是不会被雷击中的（但是不要停下来嗑药，洞里还是会有雷击的）。往右前方继续游，我被鱼王定死一次，复活之后没有雷击，游进窗户之后就能直接打樱龙了。
+
+樱龙剧情杀，唯一的区别是发现三阶段可以先左闪再右闪，可以有效避免伤害。一次过。
+
+### 苇名城第三阶段
+
+怨恨鬼bug杀这次跳了两次就成功了，得到琉璃。剩下的琉璃，我是在源之宫杀了七面武士（跳起背刺失败，然后直接莽死两管血，要点是消失之后马上跑到下一个出现地点，可以顶着恐惧硬杀）。然后杀掉长老，开源之宫坛子贵人，鱼食换鱼鳞，游泳拿鱼鳞买琉璃，然后拿鱼须完成任务——最后才发现其实除了直接鱼鳞换琉璃之外，其实整个任务线做不做都无所谓。不过这时候就能解锁所有义手升级了（我是通关之后做的，不过既然提到琉璃，就先写在这里）。
+
+二周目初期经验提升很高，原来几十经验的小兵直接给三百，但虎口五傻大概只增加了50%的经验。不过这次放着赤鬼没杀，刷经验效率比五傻更高。方法是天守阁传送，背刺孤影众忍者，然后跑到隔壁加入混战，如果能触发背刺，可以用血烟术暗杀背刺两个忍者，不然不要管他们，直接跳房梁，等赤鬼挣脱捆绑就回城。
+
+### 三年前义父
+
+孤影众跳过，酒鬼不死斩速杀，二周目这些都是熟悉的套路了。全盛枭需要换成一字斩二连，用来确反危字下劈，见到横扫危字攻击，马上跳起然后输入二连指令，可以安定确反。大破绽下劈、扔禁药这些大破绽招数不见了，扔鞭炮更加常见，要注意中距离后退，近距离后跳然后冲前砍，突刺直接看破（亮度调到最高的话，突刺前置动作是能看出来的，不用等到危字出现。二阶段瞬移跑开就好，危字冲击波跳起之后見切り，新加的两招算是白给。不过后跳之后会和天守阁一样扔飞镖了，注意防御两次。
+
+### 剑圣
+
+打法和一周目完全一样，最后还是磕了一个地藏一个弑神过去的，一次过（弦一郎阶段因为中了不死斩翻车一次）。
+
+### 子任务
+
+武士线走的乐师路线，小太郎走的穴山路线；对于一周目，地藏、赤成珠、太郎柿、无限量阿攻糖之类都没啥大用，无所谓选择困难症。
+
+至此二周目完成，准备封盘。如果继续打的话，应该是只拿战斗记忆，打到最高周目，然后刷经验解锁所有技能。我现在有三个技能点，还需要32个技能点解锁全部技能，不小心拿五个技能点换了一点攻击力。正常打，用技能点换攻击力似乎不太合适，通关无论是Hit and Run还是弹刀，前提还是要熟悉招式。
+
+## 总结
+
+没完成八周目还符敲钟就总结，跟忍龙没完成超忍，鬼泣没完成DMD全S性质差不多。不过我不是挑战极限的玩家，玩到自己满意的程度就好了。总体来说，只狼日常流程是天诛、合金装备类的潜入游戏，Boss战则是类似鬼武者和忍龙的冷兵器动作游戏，同时加入死亡惩罚、低体力等魂类要素。总体设计上，在资源有限的前提下（人物动作、表情、建模、口型细节不足，推测预算有限），建筑画风非常出色，音乐也配合的很好，体现了制作人优秀的审美水准。
+
+系统方面，躯干和体力的设计增加了打法的多样性，玩家既可以选择Hit and Run蹭血，也可以打铁硬钢拼反应。Bug非常多，像什么破戒僧中毒粉忍杀和卡悬崖，凛卡墙角，鬼形部怨恨鬼跳崖……哪怕是天守阁关厕所，严格来说也是Bug，相信并非设计师有意为之。如果跟其他动作游戏的普通模式一样，狼的血量是现在的十倍，这些Bug会直接毁了这个游戏。但是因为本身的难度在那摆着，Bug竟然不但被接受，而且有人甚至非常喜欢（逃课怨恨鬼的恐怕比正常攻略的还要多），也是非常神奇的现象了。
+
+如前言所说，虽然是同一个制作人，虽然有类似要素，但在我看来，只狼不同于魂类游戏，设计上动作游戏要素更多，RPG要素更少。作为动作游戏爱好者，我可以说这是一个值得一玩的好游戏。
