--- a/_posts/2020-04-27-只狼.md
+++ b/_posts/2020-04-27-只狼.md
@@ -80,11 +80,18 @@ categories: Sekiro PC 游戏 只狼
   - [三年前义父](#%E4%B8%89%E5%B9%B4%E5%89%8D%E4%B9%89%E7%88%B6-1)
   - [剑圣](#%E5%89%91%E5%9C%A3)
   - [子任务](#%E5%AD%90%E4%BB%BB%E5%8A%A1)
+- [三周目](#%E4%B8%89%E5%91%A8%E7%9B%AE)
+- [四周目](#%E5%9B%9B%E5%91%A8%E7%9B%AE)
+- [五周目](#%E4%BA%94%E5%91%A8%E7%9B%AE)
+  - [另一种路线](#%E5%8F%A6%E4%B8%80%E7%A7%8D%E8%B7%AF%E7%BA%BF)
+  - [我的路线](#%E6%88%91%E7%9A%84%E8%B7%AF%E7%BA%BF)
 - [总结](#%E6%80%BB%E7%BB%93)
 
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
 
 ## 前言
+
+5/11/2020 五周目更新：PC版五周目解锁全技能，三个Good ending，修罗结局和八周目打算等以后有机会主机上再打。如无意外本文不再更新，因此最后再复习一遍本文，并加上最新的想法收工，开坑Doom Eternal。
 
 太长请跳过。
 
@@ -114,9 +121,13 @@ Nier：打B结局途中感到无聊就弃坑了。如果二周目允许跳图，
 
 不过总的来说，只狼体验和普通难度忍龙差不多。我忍龙是在超忍战斗机那关弃坑的，只狼大概不会在一周目就放弃。
 
+**五周目按：初见看法基本没变，对龙咳的评论不符合实际情况，但确实符合没足够滴露的初见玩家的看法——死太多龙咳影响子任务，在没通关的情况下，很难判断应该什么时候治疗龙咳。如果是老玩家开新裆就很简单了，一周目龙咳可以在第二、第三次入侵前集中治疗，以完成相关支线。**
+
 ## 一周目流水账第一部分
 
 首先是线性部分。弦一郎之前的教学关不算，之后的精英怪挑战失败代价很小，脱战很容易，所以不看攻略也能轻松解决。
+
+**五周目按：这游戏小兵是什么？不是应该直接跑酷，只打给战斗记忆的Boss吗？**
 
 ### 武士大将·河原田直盛
 
@@ -137,6 +148,8 @@ Nier：打B结局途中感到无聊就弃坑了。如果二周目允许跳图，
 
 可见抱怨只狼没有简单难度是不公平的，只能说没有设定相当于忍龙里忍犬的最低难度。问题是被称为忍犬，玩家真的会高兴吗？
 
+**五周目按：多周目精英只给钱袋，能跳的话没必要浪费时间。武士大将们弹刀即可。**
+
 ### 铃铛
 
 拿到铃铛之后，我马上回到三年前。因为河原田直盛是可以跳过的，所以三年前故事线从一开始就可以解锁；我玩游戏一般都是先支线后主线，所以直接跑到三年前，但是中途迷路了，拿了机关斧和吹火筒之后转回桥头鬼仏，误以为支线已经完成，于是就回到了现实。没有地图就是会有这种问题，不过本作地图其实也是剧情的一部分，提供地图就相当于剧透了一部分剧情，所以也没办法。当时我还奇怪三重塔在哪，心想莫非是伏笔？我都转了两圈了不可能迷路吧？（就是迷路了啊良牙君！）
@@ -144,6 +157,8 @@ Nier：打B结局途中感到无聊就弃坑了。如果二周目允许跳图，
 ### 赤鬼
 
 脱战背刺，然后吹火筒平砍，稍微躲一下技能就能砍死了。因为有控制技能，比武士大将还简单。
+
+**五周目按：阿攻神雪平砍，闪开技能之后拼血。**
 
 ### 武士大将·山内典膳
 
@@ -159,6 +174,8 @@ Nier：打B结局途中感到无聊就弃坑了。如果二周目允许跳图，
 
 鬼庭部是第一个Boss。我一般不会按住格挡，但是不知道为什么，我无法弹反这类忽快忽慢的Boss，这是第一个难点。跟赤鬼相比，鬼庭部硬钢的话，鞭炮用完也无法打到他的两管血，这是第二个难点。但是发现可以用钩爪之后，只要保持距离，这个Boss就没有难度了。
 
+**五周目按：阿攻神雪平砍，近距离弹刀，远距离钩绳。**
+
 ### 武士大将·松本内藏佑
 
 小兵围在一起，不太容易勾引，所以用跳杀-脱战-跳杀循环，杀掉所有小兵并跳杀第一管血。之后跟其他两个武士大将一样。顺便说一句，之后会碰到很多跟这几个武士大将强度差不多的小兵，打铁即可（拼刀-对方弹反-只狼弹反-循环-对方失去平衡，刺杀）。
@@ -166,6 +183,8 @@ Nier：打B结局途中感到无聊就弃坑了。如果二周目允许跳图，
 ### 火牛
 
 爆竹使用实际不太好掌握，弹反了半天没弹到，不过动物类Boss只会乱跑不会追着打人，火牛血又薄，追着砍就行了。
+
+**五周目按：首先清小兵，弹刀造成硬直，阿攻神雪砍头。被逼墙角砍屁股。**
 
 ### 三年前
 
@@ -175,9 +194,13 @@ Nier：打B结局途中感到无聊就弃坑了。如果二周目允许跳图，
 
 这个是目前为止（目前进度三年前义父）最莫名其妙的精英。我后来看攻略都提到了这个相当于看破教学的精英，但是我怎么也想不起来自己打过他了，估计是背刺之后把他当成普通小兵处理了。可见这家伙有多弱。
 
+**五周目按：先清小兵，然后背刺，白给突刺太多，随便打。**
+
 ### 三重塔孤影众
 
 孤影众和武士大将一样，后来满大街都是，但是因为我打不出完美格挡/反击，没思路死了好多次。结果我逃走的时候他跟着跳下来自杀了……我本来没想逃课的老师……不过这个好像不是精英？我后来没去看过，现在也想想也许他还在那。
+
+**五周目按：对付孤影众的方法都一样，阿攻神雪对砍为主，对方攻击全部弹开，危字直踢见切。不要因为贪对方躯干槽被逼墙角，站位合适的话两套攻防转换的事。**
 
 ### 酒鬼·蚺蛇重藏
 
@@ -187,11 +210,15 @@ Nier：打B结局途中感到无聊就弃坑了。如果二周目允许跳图，
 
 顺便说一句，逃课归逃课，我基本上都是避免使用忍具，除了特别说明；道具基本都是禁的。我玩游戏是那种通关之后剩下一堆补药的类型，挑战失败后如果丢失道具我心里会不舒服，所以会尽量避免。然后多失败几次找到对策，也就不用道具什么的了。
 
+**五周目按：有帮手找帮手，没帮手用不死斩。**
+
 ### 幻之蝶
 
 这是我第一个看攻略的Boss。不可否认，在云游戏时代，有了视频攻略，游戏难度会大大降低。因此是自己死磕还是照本宣科，每个人的态度都无可厚非。本来我是喜欢自己探索的，但是因为龙咳的设定，会变得讨厌死亡，所以打几次没思路就会直接看攻略了。这也是我在前言中所说，反感魂类要素的原因。当然如果实在找不到思路，比如鬼泣DMD瞬移哥、V哥，我也会看攻略有没有什么简单的打法，但总的来说，死亡惩罚会让我更不倾向于自己摸索。因为是被强迫的，所以会讨厌这种设定。
 
 看了视频之后幻之蝶就非常简单了。第一阶段前方闪避-冲刺斩循环，第二阶段打法和攻略有所不同。如前所说，我基本不用道具，所以在不用鸣种的前提下，幻影阶段只能跑酷（最好锁定老太太，但是人太多可能会不好锁定，这时候要跑远加手动调整视角），然后的蝴蝶攻击我没有躲柱子，而是往水平方向跑更容易躲开。之后可以继续闪避-斩循环，只不过二阶段很容易打破循环召唤幻影，到时候再跑酷即可。如果使用鸣种会大大降低难度。
+
+**五周目按：拼刀更快，跳开手里剑击落，老太太背对墙壁跳起手里剑会失去焦点，别贪直接跑开。**
 
 ### 开放式地图
 
@@ -201,13 +228,18 @@ Nier：打B结局途中感到无聊就弃坑了。如果二周目允许跳图，
 - 天守阁路线，好处是可以解锁更多区域，坏处是游戏难度会进入下一阶段；
 - 水生村路线，好处是可以解锁潜水，不至于以后要重返特定区域探索，是我选的第二条路；
 - 当然还有三年前，好处是做完这条线就暂时不用管了，坏处是不看攻略可能会被幻之蝶教做人。
+
 如果开新裆，我可能会选择水生村路线。不过这次自由探索下，其实我是几个线都在探索。首先我是仙峰寺路线直接走到敲钟，然后……卡关盔甲武士。于是我返回正门，开始天守阁路线。
+
+**五周目按：我的路线是居合哥之后仙峰寺打铁甲武士开正殿，Bug跳井底走水生村路线走到水车小屋，打屑一郎进入第一阶段；杀破戒僧学潜水，杀狮子猿进入第二阶段，然后抓猴——这些Boss用不死斩不如不用。然后就是线性的了。**
 
 ### 佐濑甚助
 
 在经历了铁甲武士之后，佐濑甚助真不愧是一股清流，白光弹刀两次，看破突刺攻击，两管血也瞬间就没。完全不用走位和反击的精英，就算是输给他几次也感觉很痛快。
 
 不过接下来就是孙子了，为了不提高难度（纸人价格升到20），我又返回去打铁甲武士，走完仙峰寺路线。
+
+**五周目按：就算没看到白光，瞎鸡巴弹两下也没副作用，不要因为对方一直不出刀搞到自己心态崩溃。**
 
 ### 盔甲武士
 
@@ -220,6 +252,8 @@ Nier：打B结局途中感到无聊就弃坑了。如果二周目允许跳图，
 最大的敌人是AI的随机性，明明在窗户边已经快打崩了，结果突然摆出撒泼架势，被逼不得不后退，又要小心反击不要打崩的时候，真的心态爆炸。看着他跌下悬崖大喊“罗伯特~”的时候，心里感受只有一句操你妈死得好。这也是我第一个被迫动用忍具的Boss，毕竟机关斧打躯干特别好用，跟吹火筒打赤鬼一样，有一些钦点的味道。
 
 另外，在这个Boss身上，可以看出地形对难度的影响。可以说，如果是大平原，几乎所有Boss都没啥威胁，只要跑远点等对方出大破绽招式，蹭血即可。但实际上，躲闪空间是有限的，因此也决定了一些Boss的难度。盔甲武士特别明显是因为必须主动让他摆位，但其实对别的Boss，这个道理也通用。比较有代表性的就是之前的三重塔孤影众，狭小的地形明显提高了难度。
+
+**五周目按：现在是很简单的Boss了，几琉璃斧下去躯干就没了，稍微走走位，很容易就能踢下去。二周目之后只翻车过一次。**
 
 ### 长爪蜈蚣·仙云
 
@@ -243,6 +277,8 @@ Nier：打B结局途中感到无聊就弃坑了。如果二周目允许跳图，
 
 逃课打法是毒死，具体原理是精英在沼泽的时候，如果狼触发中毒读条，精英怪也会跟着中毒，持续时间大概是三分之一到四分之一HP。所以具体路线有很多，两个鬼仏处出发都行，背刺或击杀所有小怪，然后脱战，背刺第一管血。也可以先背刺后清场，熟悉路线的话就算顶着仇恨也能完成击杀。之后躲在炮打不到的地方，触发自己中毒，然后等白秋HP掉光，忍杀即可。
 
+**五周目按：阿攻神雪平砍，危字鞭炮，其实鞭炮spam基本上就能砍死了。万一被击中不要贪躯干槽，跑开回复。**
+
 ### 牛饮德次郎
 
 飞镖打死狗，跳砍背刺，然后开始补课。我没有选择拼刀，而是躲闪为主，后跳反击。其实这就是近距离的Hit and Run，可以用来对付这类破绽比较多的敌人，或者孤影众那类判定弱的。直到幻影破戒僧开始，我才用中距离Hit and Run，按住加速躲技能。等到再战蚺蛇重藏的时候，发现加速跑比近距离躲闪安全多了。
@@ -263,6 +299,8 @@ Nier：打B结局途中感到无聊就弃坑了。如果二周目允许跳图，
 
 直接逃课了。把她引到鬼仏附近，她的AI会出问题，停止攻击。把她石头和墙的夹角，砍爆两管血就完了。
 
+**五周目按：每次总是忍不住花点时间把她打死拿地藏，因为太好欺负了。**
+
 ### 幻影破戒僧
 
 有两种逃课打法，直接忍杀和鞭炮灰球循环。但是因为打循环要上飞雪，我又不喜欢用道具，而硬钢的话，这家伙招式太飘，我弹不中，所以最后选择的是Hit and Run。这也是我第一个正经使用Hit and Run战术的boss，现在想起来，之前硬钢所有boss和精英真是辛苦了。
@@ -273,11 +311,15 @@ Hit and Run很简单，就是在场地够大的情况下和敌人保持距离，
 
 击败幻影破戒僧之后，获得潜水能力，可以选择走坠落之谷线。击败弦一郎或者破戒僧，难度会进入第二阶段。按理说应该去完成坠落之谷，击杀狮子猿，然后击败弦一郎，难度进入第三阶段之后再击杀四猴。不过我没看攻略，选择了先击杀弦一郎，导致坠落之谷路线难度稍高了一点点。如果先击败了弦一郎，注意尽量把四猴留到最后，会轻松一些。
 
+**五周目按：第三个鞭炮最好，阿攻神雪鞭炮loop，三个鸣种搞定。**
+
 ### 苇名弦一郎
 
 到此为止，自由探索部分结束，需要击败苇名弦一郎才能进入下一个阶段。打法也不难，开局弹反射箭加地滚砍，然后平砍到他弹反，之后弹反他的所有斩击，然后一阶段看破，二阶段踩头他的“危”字攻击，循环即可。失败了不要贪躯干槽，拉开距离回血，躯干槽这东西只要没失误，一管血也就是三个攻防循环的事，不用太纠结一时得失。
 
 我最丢人的是第三阶段试了好几次，雷返也没试出来，最后索性直接打铁过去了。估计之后会需要补课。
+
+**五周目按：招数太少，随便弹刀。怕被打崩可以用刚躯。**
 
 ### 耍猴
 
@@ -289,6 +331,8 @@ Hit and Run很简单，就是在场地够大的情况下和敌人保持距离，
 - 那为啥又有敲钟？也是不听？
 
 总之摸不着头脑。隐身猴最明显，直接砍脚印就行，别的都是到处跑看到个猴追上就搞死了，只有声猴特别需要敲钟一下。对他的绿色伊丽莎白圈印象很深。
+
+**五周目按：手残打法后面五周目的部分有所提及。**
 
 ### 蛇眼·白藤
 
@@ -312,6 +356,8 @@ Hit and Run很简单，就是在场地够大的情况下和敌人保持距离，
 
 我不善于弹反缓慢的攻击，所以直接防御，等下劈的时候再弹反就行。之后长枪连按两次，注意不要长按，而且不用瞄准，随便按两次就能触发动画。其他高跳和怒吼跑开就好，动作非常大。相比第一阶段，能打躯干条的第二阶段更简单。
 
+**五周目按：阿攻神雪作用不大，主要还是破绽的时候放火烧出炎上。二阶段随便弹刀。**
+
 ### 孤影众·忌手
 
 回到天守阁，孤影众和武士开始乱战，不管谁打死的都可以获得经验和吸钱。赤鬼可以再杀一次，也可以挑斩一管血，难度非常低。
@@ -333,6 +379,8 @@ Hit and Run很简单，就是在场地够大的情况下和敌人保持距离，
 第二阶段我拜年几次发现不好用之后，换成了不死斩。跟拜年不同，不死斩需要消耗纸人，所以最好在双发忍者镖下劈这种超大硬直的情况下才反击，纸人用完之后就可以随便反击了，反正HP攻击力还是比拜年二连要高。
 
 之后根据不同结局，可以选择不同线路。我选择先打三年前线，因为比较短。打到三年前义父之后再打另一条线。
+
+**五周目按：弹刀，禁药兜后，天守阁义父没事就发两镖跳起下劈，不死斩垫布逃开。烟雾弹注意锁定视角。**
 
 ### 孤影众·枪足之正长
 
@@ -357,6 +405,8 @@ Hit and Run很简单，就是在场地够大的情况下和敌人保持距离，
 然后开始探索源之宫。除了不能下水之外，别的没什么好注意的，敌人基本都能暗杀，被发现的话要速杀贵族，不然会被年寄；武士可以用锈丸快速击杀。一点一点推过去的话，敌人比孤影众忍者更好应付。普通小兵难度的话，我觉得孤影众最难，腿攻击难以弹反；赤备兵、武士、和尚都可以拼刀，弹反，应付危字攻击，节奏感比孤影众强一些；苇名众可以连续弹刀，近距离一对一可以更快解决；源之宫武士用锈丸解决，难点是有几个场景不能一对一；不能弹反的和尚、赤备喷火兵之类平砍即可，和三刀破防的小兵一样，最好对付。
 
 源之宫的感觉和合金装备5很像，可以从破戒僧一直推到看跳舞的赏花舞台。当然其实不用打，不过Hit and Run加血雾，完成一对五也有一定的乐趣。接下来就是难度在雾隐贵人之上的强力精英，也是阻止我们畅游的罪魁祸首。
+
+**五周目按：二阶段用鞭炮卡悬崖比较稳。**
 
 ### 淤加美长老·静
 
@@ -388,6 +438,8 @@ Hit and Run很简单，就是在场地够大的情况下和敌人保持距离，
 ### 无首狮子猿
 
 我一开始还奇怪为什么游戏有这么大的空地，后来才知道果然墙上的枪是一定会被击发的。二次狮子猿其实难度更低了，因为一阶段其实熟悉打法之后，弹刀难度很低，而且后期物资丰富，还可以用飞雪加速击杀（虽然一周目我除了剑圣还是坚持不用道具的原则）。二阶段看起来场面很乱，但黑猿其实时很弱的，鞭炮两次加平砍基本就能带走了。比较稳妥的办法是等恐惧之吼之后，黑猿会主动跑过来，白猿也有硬直，鞭炮平砍会更安全；但其实也可以锁定黑猿，和白猿拉开距离就能开砍了。甚至可以弹反白猿造成硬直再去攻击黑猿。总之，这个时期玩家攻高血厚，对攻击模式也更加熟悉，可以随便欺负狮子猿了。
+
+**五周目按：一阶段阿攻神雪防恐惧，从隐藏森林路点跳下去，弄不好能直接砍死。二阶段锁定黑猿比较好。**
 
 ### 苇名流·水生氏成
 
@@ -425,6 +477,8 @@ Hit and Run很简单，就是在场地够大的情况下和敌人保持距离，
 
 三年前义父不吃拜年loop，地方太小Hit and Run容易失误，最后我是拼刀打过去的。这个boss和天守阁弦一郎我最后都是拼刀强杀，通过视频熟悉攻击模式和应对方法。
 
+**五周目按：大破绽招数改成危字横扫接下劈了，跳过横扫之后直接给不死斩。鞭炮招数需要有足够的空间后撤，因此要注意走位。**
+
 ### 剑圣·苇名一心
 
 剑圣最大的难度在于四管血很烦，所以最后是用道具流拼过去的。
@@ -435,6 +489,8 @@ Hit and Run很简单，就是在场地够大的情况下和敌人保持距离，
 
 第三和第四阶段，我是用Hit and Run，只反击下砸那招，跳起的时候朝敌人方向闪避，然后不死斩一下，后退两次。最接近的一次，第四阶段还剩半血，于是用了一个襁褓地藏过的。两个雷返都没有成功，真是丢人。
 
+**五周目按：二三阶段最怕被打崩，或者提高躯干槽管理能力，或者学垫步无敌帧。我两样都不会所以还是有点吃力。安定打法第一阶段只要刀入鞘就兜后，二三阶段用伞反击下劈和两个剑气攻击。总之这个Boss还是有点难度，有地藏就用吧。**
+
 ### 一周目总结
 
 能收集的基本都收集了，小太郎送去神隐，武士送去地牢，两个红眼意外地死了好几次。不用月隐糖背刺的话，两个红眼其实挺难打的，最后是用旋转火斧拼死了和尚，然后再去跟武士单挑。单挑当然就没有难度了。
@@ -444,6 +500,8 @@ Hit and Run很简单，就是在场地够大的情况下和敌人保持距离，
 佛珠最后差了三个，两个在水下，一个在毒沼大佛头顶，当初没有找到上去的路。
 
 琉璃武器做的手里剑和机关斧，我义手派生一个也没升级，这些也没起到什么作用。不过据说剑圣用火伞打更安定。
+
+**义手口哨和蒲扇我没用过，别的都有点作用，但作用不太大；技能除了不死斩也没什么好用的，为了防止不小心出招，干脆取消算了。优先升级被动技能，具体路线下次开荒再注意一下。**
 
 （待续）
 
@@ -522,6 +580,52 @@ Hit and Run很简单，就是在场地够大的情况下和敌人保持距离，
 武士线走的乐师路线，小太郎走的穴山路线；对于一周目，地藏、赤成珠、太郎柿、无限量阿攻糖之类都没啥大用，无所谓选择困难症。
 
 至此二周目完成，准备封盘。如果继续打的话，应该是只拿战斗记忆，打到最高周目，然后刷经验解锁所有技能。我现在有三个技能点，还需要32个技能点解锁全部技能，不小心拿五个技能点换了一点攻击力。正常打，用技能点换攻击力似乎不太合适，通关无论是Hit and Run还是弹刀，前提还是要熟悉招式。
+
+## 三周目
+
+一晚上打完天守阁义父，不再退游戏，NPC随便咳反正我有二十多个龙胤滴露。一共死了不到十次，义父两次就过了，还算不错。
+
+解锁漩涡云之后拿武士大将试刀，两招直接打崩，似乎是不错的虐菜招数。（然后后来发现还是弹刀万能）
+
+目前为止的所有boss，最烦的是二周目觉得很好打的狮子猿，第一阶段血太长很烦，相比之下无首形态和一打二简单多了。估计是因为二周目研究了其他boss的打法，已经习惯弹刀了。
+
+源之宫破戒僧卡位打法有点变化，二阶段逃出卡位好几次，最后扔鞭炮触发的Bug杀。
+
+天守阁接任务发生了错误，没拿到义父铃铛，导致记忆少拿了一个。
+
+这次剑圣一心不吃糖拼刀过的，第二阶段弹反问题不大瞎按就行，伞反时机掌握的不太好，纸人用光之后直接弹难度反而更低。
+
+## 四周目
+
+四周目打Boss开始嗑药了，能莽就莽，死的次数也多了很多。不过借此也收获了很多教训，五周目的时候见一心前只死了两次。
+
+## 五周目
+
+### 另一种路线
+
+下面是我看另一个NG+7速通视频的路线，我记下来当做参考。括号里是我习惯的路线。
+
+打赤鬼，火牛，鬼形部，然后杀一个老鼠，和一心对话，回城。
+
+居合哥应该跳但是打了有利于重复挑战屑一郎。打屑一郎（高周目可能需要躲开瞎鸡巴砍防止被打崩），对话，点香，休息，和御子对话，和一心对话，回城。
+
+仙峰寺路线，傀儡放风筝老鼠可以skip杀蛇拿干柿子跳到毒沼（另一种skip是苇名城跳右侧悬崖，杀孤影众到毒沼，这样杀凛可以拿一个地藏），打铁甲武士，捉猴。
+
+然后用上面提到的方法跳到毒沼，杀蛇眼（爆竹破投技），杀贵族，有左卫门可以完成子任务杀凛拿地藏，鞭炮杀破戒僧，拿结石。
+
+如果之前走的风筝skip，可以杀白蛇拿鲜柿子去杀狮子猿，不然就要走白蛇神庙线潜水躲白蛇杀狮子猿。拿花回地牢入口。
+
+过桥跳水，潜水左转，激活存盘点。弹刀打义父。对话御子，休息，对话艾玛，御子，点香，对话御子，偷听，对话艾玛，休息，上楼继续对话，休息，去遗冢对话，破庙偷听对话拿铃。
+
+源之宫杀破戒僧，潜水躲雷，杀樱龙。
+
+### 我的路线
+
+打火牛之后选择仙峰寺路线，在不加难度的情况下打铁甲武士。到正殿之后回城打屑一郎。
+
+杀狮子猿之后再捉猴，可以打低难度狮子猿。捉猴先回头砍空气，然后吃糖杀敲锣的，去中间杀带伊丽莎白圈的，逃跑的话敲钟；楼下开门，上房把眼神好的赶到黑房间，杀之。或者学速杀打法练走位。
+
+赤鬼平砍，鬼形部平砍鞭炮，火牛弹反砍头，铁甲武士机关斧，屑一郎弹反，蛇眼平砍鞭炮，破戒僧鞭炮鸣种，狮子猿一阶段喷火二阶段长枪。屋顶义父弹刀不死斩。忍者猎人平砍，酒鬼第一次二打一第二次不死斩，蝴蝶夫人拼刀，三年前义父弹刀不死斩。
 
 ## 总结
 
