updated old posts

--- a/_posts/2020-09-21-far-cry.md
+++ b/_posts/2020-09-21-far-cry.md
@@ -7,12 +7,4 @@ categories: Far Cry 5 New Dawn
 
 # Far Cry 5 & New Dawn：为什么我玩的下去？
 
-<!-- START doctoc generated TOC please keep comment here to allow auto update -->
-<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
-# 目录
-
-<!-- END doctoc generated TOC please keep comment here to allow auto update -->
-
-## 前言
-
-……结果虽然玩得下去但是下不下去。
+……结果虽然玩得下去但是下不下去。总体上来说，这两款游戏虽然恶评如潮，缺点也确实不少，但作为沙盒游戏，能让我玩得下去并且玩得开心，也是有其道理所在的。引人入胜的故事是关键。
